--- a/jirable/jirable.css
+++ b/jirable/jirable.css
@@ -56,7 +56,7 @@
 .issues .issue.issue-square {
     width: 263px;
     height: 280px;
-    margin: 0px 3px 3px 0px;
+    margin: 0px 3px 3.5px 0px;
 }
 .issues .issue.issue-rectangle {
     width: 396px;
@@ -150,4 +150,8 @@
     margin: 0px 5px 5px 0px;
     display: inline-block;
     vertical-align: middle;
+}
+#print {
+    width: 15.7em;
+    display: block;
 }
