--- a/consolex/consolex.css
+++ b/consolex/consolex.css
@@ -15,10 +15,12 @@
     border: 0;
     clip: rect(0 0 0 0);
 }
+#panelFlyout {
+    z-index: 999999;
+}
 .flyout .panel-flyout {
     position: fixed;
     bottom: 0;
-    z-index: 999999;
     width: 220px;
     height: 100%;
     color: #fff;
@@ -42,7 +44,7 @@
     position: fixed;
 }
 .flyout .button-toggle {
-    z-index: 9999999;
+    z-index: inherit;
     width: 32px;
     height: 32px;
     background-color: #000;
@@ -108,6 +110,7 @@
     color: #000;
     font-size: 14px;
     text-align: center;
+    z-index: inherit;
 }
 .flyout .button:after {
     position: absolute;
@@ -145,7 +148,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999999;
+    z-index: inherit;
 }
 .modal__container {
     background-color: #fff;
